--- a/ETL_clean_kaggle_data.ipynb
+++ b/ETL_clean_kaggle_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "source": [
     "import json\r\n",
     "import pandas as pd\r\n",
@@ -13,7 +13,7 @@
     "from sqlalchemy import create_engine\r\n",
     "import psycopg2\r\n",
     "\r\n",
-    "# from config import db_password\r\n",
+    "from config import db_password\r\n",
     "\r\n",
     "import time"
    ],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "source": [
     "#  Add the clean movie function that takes in the argument, \"movie\".\r\n",
     "def clean_movie(movie):\r\n",
@@ -69,18 +69,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "source": [
     "# 1 Add the function that takes in three arguments;\r\n",
     "# Wikipedia data, Kaggle metadata, and MovieLens rating data (from Kaggle)\r\n",
-    "\r\n",
     "def wkr_reader():\r\n",
     "    # Read in the kaggle metadata and MovieLens ratings CSV files as Pandas DataFrames.\r\n",
     "    kaggle_metadata = pd.read_csv('movies_metadata.csv', low_memory=False)\r\n",
     "    ratings = pd.read_csv('ratings.csv')\r\n",
     "\r\n",
     "    # Open and read the Wikipedia data JSON file.\r\n",
-    "    file_dir = 'C://Users/2ainm/Movies-ETL'\r\n",
+    "    file_dir = 'C://Users/2ainm/Movies-ETL/'\r\n",
     "    f'{file_dir}wikipedia-movies.json'\r\n",
     "    with open (f'{file_dir}/wikipedia-movies.json', mode='r') as file:\r\n",
     "            wiki_movies_raw = json.load(file)\r\n",
@@ -106,8 +105,11 @@
     "            print(imdb_id_duplicates)\r\n",
     "\r\n",
     "    #  7. Write a list comprehension to keep the columns that don't have null values from the wiki_movies_df DataFrame.\r\n",
-    "    wiki_columns_to_keep = [column for column in wiki_movies_df.columns if wiki_movies_df[column].isnull().sum() < len(wiki_movies_df) * 0.9]\r\n",
     "\r\n",
+    "    [[column,wiki_movies_df[column].isnull().sum()] for column in wiki_movies_df.columns]\r\n",
+    "    wiki_columns_to_keep = [column for column in wiki_movies_df.columns if wiki_movies_df[column].isnull().sum() < len(wiki_movies_df) * 0.9]\r\n",
+    "    wiki_movies_df = wiki_movies_df[wiki_columns_to_keep]\r\n",
+    "    \r\n",
     "    # 8. Create a variable that will hold the non-null values from the “Box office” column.\r\n",
     "    box_office = wiki_movies_df['Box office'].dropna()\r\n",
     "    \r\n",
@@ -213,7 +215,7 @@
     "\r\n",
     "    wiki_movies_df['running_time'] = running_time_extract.apply(lambda row: row[0]*60 + row[1] if row[2] == 0 else row[2], axis=1)\r\n",
     "    wiki_movies_df.drop('Running time', axis=1, inplace=True)\r\n",
-    "  \r\n",
+    "\r\n",
     "    # 2. Clean the Kaggle metadata.\r\n",
     "\r\n",
     "    kaggle_metadata = pd.read_csv('movies_metadata.csv', low_memory=False)\r\n",
@@ -290,15 +292,27 @@
     "    movies_with_ratings_df = pd.merge(movies_df, rating_counts, left_on='kaggle_id', right_index=True, how='left')\r\n",
     "    movies_with_ratings_df[rating_counts.columns] = movies_with_ratings_df[rating_counts.columns].fillna(0)\r\n",
     "\r\n",
+    "    db_string = f\"postgresql://postgres:{db_password}@127.0.0.1:5432/movie_data\"\r\n",
+    "    engine = create_engine(db_string)\r\n",
+    "    movies_df.to_sql(name='movies', con=engine, if_exists='replace')\r\n",
+    "    \r\n",
+    "    rows_imported = 0\r\n",
+    "    start_time = time.time()\r\n",
+    "    \r\n",
+    "    for data in pd.read_csv(f'{file_dir}ratings.csv', chunksize=1000000):\r\n",
+    "        print(f'importing rows {rows_imported} to {rows_imported + len(data)}...', end='')\r\n",
+    "        data.to_sql(name='ratings', con=engine, if_exists='append')\r\n",
+    "        rows_imported += len(data)\r\n",
     "\r\n",
-    "    return wiki_movies_df, movies_with_ratings_df, movies_df\r\n"
+    "        print(f'Done. {time.time() - start_time} total seconds elapsed')\r\n",
+    "        "
    ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "source": [
     "# 10. Create the path to your file directory and variables for the three files.\r\n",
     "file_dir = '../Resources'\r\n",
@@ -314,17 +328,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "source": [
     "# 11. Set the three variables equal to the function created in D1.\r\n",
     "wiki_file, kaggle_file, ratings_file = wkr_reader()"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      "C:\\Users\\2ainm\\anaconda3\\envs\\PythonData\\lib\\site-packages\\pandas\\core\\strings\\object_array.py:160: FutureWarning: Possible set difference at position 6\n",
+      "  compiled = re.compile(pat, flags=flags)\n",
+      "C:\\Users\\2ainm\\anaconda3\\envs\\PythonData\\lib\\site-packages\\ipykernel_launcher.py:114: FutureWarning: The default value of regex will change from True to False in a future version.\n"
+     ]
+    },
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "importing rows 0 to 1000000...Done. 29.738222360610962 total seconds elapsed\n",
+      "importing rows 1000000 to 2000000...Done. 58.20576596260071 total seconds elapsed\n",
+      "importing rows 2000000 to 3000000...Done. 86.99402093887329 total seconds elapsed\n",
+      "importing rows 3000000 to 4000000...Done. 115.5942313671112 total seconds elapsed\n",
+      "importing rows 4000000 to 5000000...Done. 148.95638370513916 total seconds elapsed\n",
+      "importing rows 5000000 to 6000000...Done. 177.78260231018066 total seconds elapsed\n",
+      "importing rows 6000000 to 7000000...Done. 206.2380347251892 total seconds elapsed\n",
+      "importing rows 7000000 to 8000000...Done. 235.47123527526855 total seconds elapsed\n",
+      "importing rows 8000000 to 9000000...Done. 265.88104605674744 total seconds elapsed\n",
+      "importing rows 9000000 to 10000000...Done. 295.7197148799896 total seconds elapsed\n",
+      "importing rows 10000000 to 11000000...Done. 325.3515200614929 total seconds elapsed\n",
+      "importing rows 11000000 to 12000000...Done. 354.71808671951294 total seconds elapsed\n",
+      "importing rows 12000000 to 13000000...Done. 384.6334607601166 total seconds elapsed\n",
+      "importing rows 13000000 to 14000000...Done. 413.72817754745483 total seconds elapsed\n",
+      "importing rows 14000000 to 15000000...Done. 444.0840890407562 total seconds elapsed\n",
+      "importing rows 15000000 to 16000000...Done. 475.2540626525879 total seconds elapsed\n",
+      "importing rows 16000000 to 17000000...Done. 507.2855339050293 total seconds elapsed\n",
+      "importing rows 17000000 to 18000000...Done. 536.1536419391632 total seconds elapsed\n",
+      "importing rows 18000000 to 19000000...Done. 568.1918835639954 total seconds elapsed\n",
+      "importing rows 19000000 to 20000000...Done. 602.5970160961151 total seconds elapsed\n",
+      "importing rows 20000000 to 21000000...Done. 633.1413643360138 total seconds elapsed\n",
+      "importing rows 21000000 to 22000000...Done. 663.2024717330933 total seconds elapsed\n",
+      "importing rows 22000000 to 23000000...Done. 693.2811625003815 total seconds elapsed\n",
+      "importing rows 23000000 to 24000000...Done. 723.7121007442474 total seconds elapsed\n",
+      "importing rows 24000000 to 25000000...Done. 753.0182113647461 total seconds elapsed\n",
+      "importing rows 25000000 to 26000000...Done. 783.3139295578003 total seconds elapsed\n",
+      "importing rows 26000000 to 26024289...Done. 784.0310122966766 total seconds elapsed\n"
+     ]
+    },
+    {
+     "output_type": "error",
+     "ename": "TypeError",
+     "evalue": "cannot unpack non-iterable NoneType object",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-5-b7b09bd825c2>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# 11. Set the three variables equal to the function created in D1.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mwiki_file\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mkaggle_file\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mratings_file\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mwkr_reader\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: cannot unpack non-iterable NoneType object"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "source": [
     "# 12. Set the DataFrames from the return statement equal to the file names in Step 11. \r\n",
     "wiki_movies_df = wiki_file\r\n",
